# draupnir

./: .gitignore  Cargo.toml  Makefile
server/: main.go
server/static/: styles.css
src/: cameras.rs  main.rs
